@@ -67,7 +67,7 @@ public class ProjectCaseDebugController extends BaseController
 		projectCaseDebug.setCaseType(projectCase.getCaseType());
 		List<Client> clients=clientService.selectClientsByProjectId(projectCase.getProjectId());
 		if(clients.size()>0){
-			List<String> driverPathList=clientService.selectClientDriverListById(clients.get(0).getClientId());
+			List<String> driverPathList=clientService.selectClientDriverListById(clients.getFirst().getClientId());
 			mmap.put("driverPathList", driverPathList);
 		}		
 		mmap.put("projectCaseDebug", projectCaseDebug);
